test/libsolidity/syntaxTests/storageLayoutSpecifier/literal_cast.sol
contract C layout at uint(42) { }
// ----
// TypeError 1505: (21-29): The base slot expression contains elements that are not yet supported by the internal constant evaluator and therefore cannot be evaluated at compilation time.
